--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="Source\Engine\Texture2D.cpp">
       <Filter>Source\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\MeshComponent.cpp">
+      <Filter>Source\Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\Camera.h">
@@ -106,6 +109,12 @@
       <Filter>Source\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\Render.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\MeshComponent.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\Component.h">
       <Filter>Source\Engine</Filter>
     </ClInclude>
   </ItemGroup>
