--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -117,5 +117,8 @@
     <ClInclude Include="Source\Engine\Component.h">
       <Filter>Source\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Engine\Bounds.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
