--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -55,6 +55,9 @@
     <ClCompile Include="Source\Engine\Texture.cpp">
       <Filter>Source\Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Engine\FileWatcher.cpp">
+      <Filter>Source\Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\Camera.h">
@@ -133,6 +136,12 @@
       <Filter>Source\Engine</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\FrameBuffer.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\spsc.h">
+      <Filter>Source\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Engine\FileWatcher.h">
       <Filter>Source\Engine</Filter>
     </ClInclude>
   </ItemGroup>
