Vector4 UnitTest & benchmark

--- a/RE_UnitTest/RE_UnitTest.vcxproj
+++ b/RE_UnitTest/RE_UnitTest.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\UnitTest.h" />
     <ClInclude Include="Source\UT_Vector4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
