--- a/RE_UnitTest/RE_UnitTest.vcxproj.filters
+++ b/RE_UnitTest/RE_UnitTest.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Source\UT_Vector4.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\UnitTest.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
