--- a/RE_UnitTest/RE_UnitTest.vcxproj
+++ b/RE_UnitTest/RE_UnitTest.vcxproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\UnitTest.h" />
+    <ClInclude Include="Source\UT_Matrix4.h" />
     <ClInclude Include="Source\UT_Vector4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
