--- a/RE.vcxproj
+++ b/RE.vcxproj
@@ -65,6 +65,7 @@
     <ClInclude Include="Source\imgui\stb_truetype.h" />
     <ClInclude Include="Source\Math\MathSSE.h" />
     <ClInclude Include="Source\Math\MathUtil.h" />
+    <ClInclude Include="Source\Math\Matrix4.h" />
     <ClInclude Include="Source\Math\Vector4.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
