--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -156,5 +156,8 @@
     <ClInclude Include="Source\Math\MathSSE.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Math\Matrix4.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
