--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -159,5 +159,11 @@
     <ClInclude Include="Source\Math\Matrix4.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Math\Quat.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Math\REMath.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
