--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -165,5 +165,8 @@
     <ClInclude Include="Source\Math\REMath.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Math\MathAVX.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
