--- a/RE.vcxproj
+++ b/RE.vcxproj
@@ -42,7 +42,6 @@
     <ClInclude Include="Source\Engine\FrameBuffer.h" />
     <ClInclude Include="Source\Engine\Light.h" />
     <ClInclude Include="Source\Engine\Material.h" />
-    <ClInclude Include="Source\Engine\Math.h" />
     <ClInclude Include="Source\Engine\Mesh.h" />
     <ClInclude Include="Source\Engine\MeshComponent.h" />
     <ClInclude Include="Source\Engine\MeshLoader.h" />
@@ -69,6 +68,7 @@
     <ClInclude Include="Source\Math\Matrix4.h" />
     <ClInclude Include="Source\Math\Quat.h" />
     <ClInclude Include="Source\Math\REMath.h" />
+    <ClInclude Include="Source\Math\UVector.h" />
     <ClInclude Include="Source\Math\Vector4.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
