--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -81,9 +81,6 @@
     <ClInclude Include="Source\Engine\Viewpoint.h">
       <Filter>Source\Engine</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Engine\Math.h">
-      <Filter>Source\Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Engine\ShaderLoader.h">
       <Filter>Source\Engine</Filter>
     </ClInclude>
@@ -166,6 +163,9 @@
       <Filter>Source\Math</Filter>
     </ClInclude>
     <ClInclude Include="Source\Math\MathAVX.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Math\UVector.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
   </ItemGroup>
