--- a/RE.vcxproj.filters
+++ b/RE.vcxproj.filters
@@ -68,6 +68,7 @@
       <Filter>Source\Engine</Filter>
     </ClCompile>
     <ClCompile Include="Source\Engine\TextureCubeArray.cpp" />
+    <ClCompile Include="Source\Engine\Texture2DArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Engine\Camera.h">
@@ -183,6 +184,7 @@
       <Filter>Source\Containers</Filter>
     </ClInclude>
     <ClInclude Include="Source\Engine\TextureCubeArray.h" />
+    <ClInclude Include="Source\Engine\Texture2DArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
